:bug: fix html overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ a {
 }
 
 html{
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 .App {
   position: relative;
